<resources>
    <string name="app_name">RebeikiaCollector</string>
    <string name="verficationtxt">We have sent you an Email with 6 digit verification code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBUrr-Ex6FhMwjHQL79-FgByfSgA2IT0S8</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="our_company" translatable="false">rebekia</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="submit">Submit</string>
    <string name="profile">Profile</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="username_c">USERNAME</string>
    <string name="email_c">EMAIL</string>
    <string name="phone_c">PHONE</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="address">Address</string>
    <string name="special_request">Special Request</string>
    <string name="please_upload_trash_images">Please Upload Trash Images</string>
    <string name="write_a_description">Write a Description</string>
    <string name="internet_not_connected">Internet not connected</string>
    <string name="request_history">Request History</string>
    <string name="speical_request_history">Speical Request History</string>
    <string name="partners">Partners</string>
    <string name="language">Language</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="create_order">Create order</string>
    <string name="current_point">Current Point</string>
    <string name="trash_types">Trash types</string>
    <string name="activation_code">Activation Code</string>
    <string name="resend_code">Resend code?</string>
    <string name="select_address">Select Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email_address_we_will_send_you_the">Enter your Email Address we will send you the OTP to verify later</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="dont_have_account_please">Dont Have Account Please</string>
    <string name="signup">SignUp</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="enter_your_code">Enter your Code</string>
    <string name="new_password">New password</string>
    <string name="create_request">Create Request</string>
    <string name="pormotions">Pormotions</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="location">Location</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="reset_password">Reset Password!</string>
    <string name="email_is_required">email is required</string>
    <string name="enter_valid_email">enter a valid email</string>
    <string name="enter_valid_pass">enter your password</string>
    <string name="pass_should_be_greateer">\"password should be at least 6 character \"</string>
    <string name="enter_user_name">enter your username</string>
    <string name="enter_your_phone_number">enter your phone number</string>
    <string name="you_Can_not_upload_more_than_3_pics">You can not upload more than 3 images</string>
    <string name="verification_code">Verification code</string>
    <string name="points">Points</string>
    <string name="upload_at_least_one_image">Please upload at least one image</string>
    <string name="bad_request">Bad request</string>
    <string name="unauthorized_user">unauthorized user</string>
    <string name="request_not_found">request not found</string>
    <string name="server_error">server error</string>
    <string name="unexpected_error">unexpected error</string>
    <string name="not_connected_to_network">not connected to network</string>
    <string name="problem_in_network">problem in network</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_must_choose_date">You must choose date</string>
    <string name="please_enble_gps">Please enable gps</string>
    <string name="your_request_submitted_at">Your Request was successfully at</string>
    <string name="you_must_choose_trash_type">you must choose trash type</string>
    <string name="address_is_selected">Address is selected press create order to submit</string>
    <string name="new_and_repeat_pass_must_be_same">New and repeat password must be same</string>
    <string name="pass_changed_successfully">Password has been changed successfully</string>
    <string name="request_forbidden">Request forbidden</string>
    <string name="confirm">Confirm</string>
    <string name="request_confirmed">Request has been confirmed</string>

</resources>
