<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignupActivity">
    <ImageView
        android:layoutDirection="ltr"
        android:id="@+id/toplayer"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_220sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_layer_2"
        android:scaleType="fitXY"
        />
    <ImageView
        android:layoutDirection="ltr"
        android:id="@+id/bottomlayer"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_100sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_layer_22"
        android:scaleType="fitXY"
        />
    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_140sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_50sdp"
        android:src="@drawable/logo"
        android:scaleType="fitXY"

        />
    <ImageView
        android:id="@+id/iv_back"
        android:layoutDirection="ltr"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:src="@drawable/ic_left_arrow"
        />
    <EditText
        android:gravity="start|center"
        android:textAlignment="viewStart"
        android:id="@+id/usernametxt"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/user_name"
        android:inputType="text"
        android:textColorHint="@color/blackhint"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:drawableStart="@drawable/username"
        android:drawablePadding="@dimen/_15sdp"
        android:background="@drawable/edittxtdesign"

        />
    <EditText
        android:gravity="start|center"
        android:textAlignment="viewStart"
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintTop_toBottomOf="@id/usernametxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_30sdp"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:hint="@string/email"
        android:textColorHint="@color/blackhint"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="@dimen/_15sdp"
        android:background="@drawable/edittxtdesign"

        />
    <EditText
        android:id="@+id/Password"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:hint="@string/password"
        android:gravity="start|center"
        android:textAlignment="viewStart"
        android:inputType="textPassword"
        android:textColorHint="@color/blackhint"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:drawableStart="@drawable/password"
        android:drawablePadding="@dimen/_15sdp"
        android:background="@drawable/edittxtdesign"

        />
    <EditText
        android:gravity="start|center"
        android:textAlignment="viewStart"
        android:id="@+id/phonenumber"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintTop_toBottomOf="@id/Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColorHint="@color/blackhint"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:drawableStart="@drawable/ic_icon"
        android:drawablePadding="@dimen/_15sdp"
        android:background="@drawable/edittxtdesign"

        />
    <Button
        android:id="@+id/signupbtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintTop_toBottomOf="@id/phonenumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/loginbtn"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>