<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="clickHandler"
            type="com.example.rebeikiacollector.ui.MenuActivity.MenuClickHandler" />
    </data>
    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.MenuActivity">

            <ImageView
                android:id="@+id/background"
                android:layout_width="0dp"
                android:layout_height="@dimen/_180sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/navheader"
                android:scaleType="fitXY"


                />

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:src="@drawable/whiteleftarrow" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_30sdp"
                app:layout_constraintEnd_toEndOf="parent" />


            <TextView
                android:id="@+id/tv_name"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/profile_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                tools:text="Mark John"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_total_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:layout_constraintBottom_toBottomOf="@id/background"
                android:layout_marginBottom="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_15sdp"
                android:textAlignment="center"
                tools:text="822 Points" />

            <ImageView
                android:id="@+id/ic_arrow"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:src="@drawable/ic_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/background"

                />

            <TextView

                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/reqeusthistory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/background"
                app:layout_constraintEnd_toStartOf="@+id/ic_arrow"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/request_history"
                android:drawableStart="@drawable/ic_all_order"
                android:drawablePadding="@dimen/_20sdp"
                android:textSize="@dimen/_12ssp"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textColor="@color/blackhint"

                />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/reqeusthistory"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/lightgrey"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp" />


            <ImageView
                android:id="@+id/ic_arrow2"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                app:layout_constraintTop_toBottomOf="@id/view1"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:src="@drawable/ic_arrow"

                />

            <TextView
                android:id="@+id/tv_speical_request"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                app:layout_constraintTop_toBottomOf="@id/view1"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintEnd_toStartOf="@id/ic_arrow2"
                android:layout_marginStart="@dimen/_30sdp"
                android:text="@string/speical_request_history"
                android:textSize="@dimen/_12ssp"
                android:drawableStart="@drawable/ic_money"
                android:drawablePadding="@dimen/_20sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/blackhint"

                />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/tv_speical_request"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/lightgrey"
                android:layout_marginStart="39dp"
                android:layout_marginEnd="40dp" />


            <ImageView
                android:id="@+id/ic_arrow3"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                app:layout_constraintTop_toBottomOf="@id/view2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:src="@drawable/ic_arrow"

                />

            <TextView

                android:id="@+id/partnertxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/view2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:text="@string/partners"
                android:layout_marginEnd="@dimen/_30sdp"
                android:textSize="@dimen/_12ssp"
                android:drawableStart="@drawable/ic_partner"
                android:drawablePadding="@dimen/_20sdp"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textColor="@color/blackhint"

                />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/partnertxt"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/lightgrey"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/toggle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_15sdp"
                app:layout_constraintTop_toBottomOf="@id/view3"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:textOn="En"
                android:textOff="Ar"
                app:showText="true"
                android:textSize="@dimen/_8ssp"
                android:textAllCaps="false"
                android:textColor="@color/green"
                app:track="@drawable/toggle2"
                android:thumb="@drawable/toggle1"

                />

            <TextView
                app:layout_constraintEnd_toStartOf="@+id/toggle"
                android:id="@+id/languagetxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/view3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:drawableStart="@drawable/language"
                android:layout_marginEnd="@dimen/_10sdp"
                android:drawablePadding="@dimen/_20sdp"
                android:text="@string/language"
                android:textSize="@dimen/_12ssp"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textColor="@color/blackhint"

                />

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/languagetxt"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/lightgrey"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp" />


            <ImageView
                android:id="@+id/ic_arrow4"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                app:layout_constraintTop_toBottomOf="@id/view4"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:src="@drawable/ic_arrow"

                />

            <TextView
                android:id="@+id/helptxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/view4"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:text="@string/help"
                android:textSize="@dimen/_12ssp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:drawableStart="@drawable/ic_rate"
                android:drawablePadding="@dimen/_20sdp"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textColor="@color/blackhint"

                />

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/helptxt"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/lightgrey"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp" />


            <ImageView
                android:id="@+id/ic_arrow5"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                app:layout_constraintTop_toBottomOf="@id/view5"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:src="@drawable/ic_arrow"

                />

            <TextView
                android:onClick="@{()->clickHandler.onLogoutClick()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/view5"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:text="@string/logout"
                android:drawableStart="@drawable/ic_logout"
                android:drawablePadding="@dimen/_20sdp"
                android:textSize="@dimen/_12ssp"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textColor="@color/blackhint"


                />

            <include
                layout="@layout/loading"
                android:visibility="gone"
                android:id="@+id/loading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="@dimen/loading_size"
                android:layout_height="@dimen/loading_size" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>